[package]
name = "nuban_rust"
version = "0.1.1"
authors = ["Tochukwu Nkemdilim <nkemdilimtochukwu@gmail.com>"]
description = "A validator and generator of Nigerian Uniform Bank Account Number(NUBAN)"
license = "MIT"
keywords = ["nuban", "validation", "nigeria", "bank", "bank_account"]
categories = ["algorithms"]
repository = "https://github.com/TNkemdilim/nuban_rust.git"
readme = "README.md"

[dependencies]

[badges]
travis-ci = { repository = "TNkemdilim/nuban_rust", branch = "master" }
codecov = { repository = "TNkemdilim/nuban_rust", branch = "master", service = "github" }